@@ -1,7 +1,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-   <title>Main Menu - OmegaT 1.6.0 User Manual</title>
+   <title>Main Menu - OmegaT 1.6.1 User Manual</title>
 </head>
 <body>
 
@@ -249,6 +249,14 @@ The menu itself contains the following items:
    <dd>
       Displays a <a href="translationEditing.html">Translation Editing</a>
       dialog to configure target field contents for not yet translated segments.
+   </dd>
+
+   <dt>Restore Main Window</dt>
+   <dd>
+      Restores the components (editor, match viewer, and glossary viewer) of the
+      main OmegaT window to their default state. Use this feature in case you
+      have undocked, moved, or hidden one or more components, and you cannot get
+      them back the way you want them.
    </dd>
 </dl>
 </p>
