@@ -26,7 +26,9 @@
 #  Do not localize this file
 #
 #  @author Maxym Mykhalchuk
+#  @author Henry Pijffers
 # 
 
 #NOI18N
 version=1.6.1
+update=12
